<resources>
    <string name="app_name">Just Java</string>
    <string name="quantity_title">Quantity</string>
    <string name="quantity_value">0</string>
    <string name="order_button">Order</string>
    <string name="price_title">Price</string>
    <string name="price_value">$0.00</string>
    <string name="incrementButton">+</string>
    <string name="decrementButton">-</string>
</resources>
